# Terraform-S3-lambda

./: .gitignore  CHANGELOG.md  README.md  aws_scripts.sh  lambda_function.py  makefile  package_lambda.sh  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
terraform/: docker-compose.yml  iam.tf  lambda.tf  main.tf  outputs.tf  s3.tf  variables.tf
