[tool.poetry]
name = "terraform-s3-lambda"
version = "0.1.0"
description = "aws lambda triggered by s3 deployed using Terraform"
authors = ["bruvio <bruno.viola@pm.me>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.24.8"
exif = "^1.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
